<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="4dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/tingle_photo"
            android:scaleType="centerInside"
            android:background="@android:color/darker_gray"
            android:cropToPadding="true"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/headline" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" "
            android:textSize="25dp"
            android:id="@+id/last_thing"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/use_camera"
                android:src="@android:drawable/ic_menu_camera" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/add_button"
            android:text="@string/text_add_button"
            android:layout_weight="78" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>

    </LinearLayout>
    <!--  rendering problems
            <view
            android:layout_width="match_parent"
            android:layout_height="10dp" />
    -->
    <LinearLayout
        android:weightSum="100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="30"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/what_thing"/>
        <EditText
            android:layout_weight="70"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/what_text"/>
    </LinearLayout>

    <LinearLayout
        android:weightSum="100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_weight="30"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/where"/>
        <EditText
            android:layout_weight="70"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/where_text"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search"
        android:text="@string/searchString"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list_all"
        android:text="@string/list_all_things"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/barcode"
        android:text="@string/scan_barcode"
        android:layout_weight="50" />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/camera"
        android:text="@string/camera"
        android:layout_weight="50" />
    </LinearLayout>

    </LinearLayout>